--- a/BTL/Site.Master
+++ b/BTL/Site.Master
@@ -48,30 +48,57 @@
                     <li class="nav-item"><a href="/About" class="nav-link link-body-emphasis px-2">About</a></li>
                 </ul>
                 <ul class="nav">
-                    <li class="nav-item"><a href="/Login" class="nav-link link-body-emphasis px-2">
-                        <asp:Label ID="lblLogin" runat="server" Text="Login"></asp:Label></a></li>
+                    <li class="dropdown" name="non-account" id="account" runat="server"></li>
+                    <li class="nav-item">
+                        <asp:MultiView ID="MultiViewNav" runat="server" ActiveViewIndex="0">
+                            <asp:View ID="ViewLogin" runat="server">
+                                <a href="/Login" class="nav-link link-body-emphasis px-2">Login</a>
+                            </asp:View>
+                            <asp:View ID="ViewLogout" runat="server">
+                                <div class="dropdown-center">
+                                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="bi bi-people">
+                                            <asp:Label CssClass="ps-2" ID="lblUser" runat="server" />
+                                        </i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a class="dropdown-item" href="#">Profile</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">
+                                                <asp:Button ID="btnLogout" class="btn btn-primary w-100 py-2" type="submit" runat="server" Text="Logout" OnClick="btnLogout_Click" />
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </asp:View>
+                        </asp:MultiView>
+                    </li>
                 </ul>
             </div>
         </nav>
 
         <%--MAIN--%>
         <div>
-            <div class="modal fade" id="modalNotify" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Message</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <asp:Label ID="lblMessage" runat="server" Text=""></asp:Label>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <asp:PlaceHolder ID="modalPlaceHolder" runat="server">
+                <div class='modal' id='myModal' tabindex='-1'>
+                    <div class='modal-dialog'>
+                        <div class='modal-content'>
+                            <div class='modal-header'>
+                                <h5 class='modal-title'>Mensage</h5>
+                                <button type='button' class='btn-close' data-bs-dismiss='modal' aria-label='Close'></button>
+                            </div>
+                            <div class='modal-body'>
+                                <asp:Label ID="Message" runat="server" />
+                            </div>
+                            <div class='modal-footer'>
+                                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Close</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </asp:PlaceHolder>
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
         </div>
@@ -121,15 +148,10 @@
                 </div>
             </footer>
         </div>
-        <script>
-            function showModal() {
-                var modal = new bootstrap.Modal(document.getElementById('modalNotify'));
-                modal.show();
-            }
-        </script>
     </form>
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
     </asp:PlaceHolder>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
