--- a/BTL/Site.Master
+++ b/BTL/Site.Master
@@ -15,6 +15,7 @@
     <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="~/Content/CSS/custom.css">
 </head>
 <body>
     <form runat="server">
@@ -129,7 +130,7 @@
 
                     <div class="col-md-4 mb-3">
                         <div class="mb-3">
-                            <h4>CÔNG TY CỔ PHẦN CÔNG NGHỆ GIÁO DỤC ABCXYZ</h4>
+                            <h4>Acme Learning Management System</h4>
                             <ul class="list-unstyled small">
                                 <li class="mb-2"><b>Ngày thành lập:</b> 01/01/2024</li>
                                 <li class="mb-2"><b>Lĩnh vực hoạt động:</b> Giáo dục, công nghệ - lập trình. Chúng tôi tập trung xây dựng và phát triển các sản phẩm mang lại giá trị cho cộng đồng lập trình viên Việt Nam.</li>
