--- a/BTL/Site.Master
+++ b/BTL/Site.Master
@@ -46,7 +46,6 @@
                     <span class="ms-2 h5 fw-bold text-dark">FitHou</span>
                 </a>
                 <ul class="nav me-auto">
-                    <li class="nav-item"><a href="<%= ResolveUrl("~/") %>" class="nav-link link-body-emphasis px-2 active" aria-current="page"><i class="bi bi-house-fill me-1"></i>Trang chủ</a></li>
                     <li class="nav-item"><a href="Courses" class="nav-link link-body-emphasis px-2"><i class="bi bi-book-fill me-1"></i>Khóa học</a></li>
                 </ul>
                 <ul class="nav">
@@ -71,7 +70,7 @@
                                     <a class="d-block link-body-emphasis text-decoration-none dropdown-toggle show" href="#" data-bs-toggle="dropdown" aria-expanded="true">
                                         <i class="bi bi-person-fill" width="50" height="50"></i>
                                     </a>
-                                    <ul class="dropdown-menu text-small" data-popper-placement="bottom-end">
+                                    <ul class="dropdown-menu text-small" data-popper-placement="bottom-end" style="width: 200px;">
                                         <li class="px-3">
                                             <div class="d-flex align-items-center">
                                                 <div>
@@ -82,6 +81,10 @@
                                                     <div class="small m-0">
                                                         <span class="fw-bold">Email: </span>
                                                         <asp:Label ID="lblEmail" runat="server" />
+                                                    </div>
+                                                    <div class="small m-0">
+                                                        <span class="fw-bold">Role: </span>
+                                                        <asp:Label ID="lblRole" runat="server" />
                                                     </div>
                                                 </div>
                                             </div>
