--- a/BTL/Site.Master
+++ b/BTL/Site.Master
@@ -15,7 +15,6 @@
     <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="~/Content/CSS/custom.css">
 </head>
 <body>
     <form runat="server">
@@ -75,7 +74,7 @@
                                             <div class="d-flex align-items-center">
                                                 <div>
                                                     <div class="h6 mt-2 mt-sm-0">
-                                                        <span class="fw-bold">User: </span>
+                                                        <span class="fw-bold">Tên: </span>
                                                         <asp:Label ID="lblUser" runat="server" />
                                                     </div>
                                                     <div class="small m-0">
@@ -83,7 +82,7 @@
                                                         <asp:Label ID="lblEmail" runat="server" />
                                                     </div>
                                                     <div class="small m-0">
-                                                        <span class="fw-bold">Role: </span>
+                                                        <span class="fw-bold">Vai trò: </span>
                                                         <asp:Label ID="lblRole" runat="server" />
                                                     </div>
                                                 </div>
@@ -95,13 +94,13 @@
                                         <li>
                                             <asp:LinkButton ID="btnProfile" runat="server" CssClass="dropdown-item" OnClick="btnProfile_Click">
                                                 <i class="bi bi-person-fill"></i>
-                                                Profile
+                                                Thông tin
                                             </asp:LinkButton>
                                         </li>
                                         <li>
                                             <asp:LinkButton ID="btnLogout" runat="server" CssClass="dropdown-item" OnClick="btnLogout_Click">
                                                 <i class="bi bi-power"></i>
-                                                Logout
+                                                Đăng xuất
                                             </asp:LinkButton>
                                         </li>
                                     </ul>
@@ -120,14 +119,14 @@
                     <div class='modal-dialog'>
                         <div class='modal-content'>
                             <div class='modal-header'>
-                                <h5 class='modal-title'>Mensage</h5>
+                                <h5 class='modal-title'>Thông báo</h5>
                                 <button type='button' class='btn-close' data-bs-dismiss='modal' aria-label='Close'></button>
                             </div>
                             <div class='modal-body'>
                                 <asp:Label ID="Message" runat="server" />
                             </div>
                             <div class='modal-footer'>
-                                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Close</button>
+                                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Đóng</button>
                             </div>
                         </div>
                     </div>
